@@ -57,9 +57,32 @@ date:</P>
 </TR>
 
 <TR Align=Center CellPadding=3 VAlign=Center>
-<TD>25</TD>
-<TD RowSpan=2>Feb</TD>
+<TD>11</TD>
+<TD RowSpan=2>Mar</TD>
+<TD>Mar</TD>
 <TD RowSpan=3>2002</TD>
+<TD>ELKS/WEB</TD>
+<TD>0.2.2</TD>
+<TD><P Align=Justify>Revised ELKS website. The ELKS release history was
+brought up to date. This included removing details of releases that
+didn't actually happen.</P></TD>
+</TR>
+
+<TR Align=Center CellPadding=3 VAlign=Center>
+<TD>4</TD>
+<TD>ELKS</TD>
+<TD>0.1.0-pre4</TD>
+<TD><P Align=Justify>Kernel release. This release moves the serial ports
+to their correct node numbers, rather than occupying nodes reserved for
+virtual terminals. It also allows the ELKS kernel to report its version
+number to any program that asks for it. Additionally, with this release,
+ELKS no longer relies on the Linux kernel source being available at
+/usr/src/linux for ELKS to compile.</P></TD>
+</TR>
+
+<TR Align=Center CellPadding=3 VAlign=Center>
+<TD>25</TD>
+<TD>Feb</TD>
 <TD>ELKS/WEB</TD>
 <TD>0.2.1</TD>
 <TD><P Align=Justify>Revised ELKS website. The ELKS release history was
@@ -67,29 +90,10 @@ brought up to date.</P></TD>
 </TR>
 
 <TR Align=Center CellPadding=3 VAlign=Center>
-<TD>24</TD>
-<TD RowSpan=5>ELKS</TD>
-<TD>0.1.0-pre5</TD>
-<TD><P Align=Justify>Kernel release. This release finalises the moving of
-the serial ports to their correct node numbers, and also allows the ELKS
-kernel to report its version number to any program that asks for it.
-Additionally, with this release, ELKS no longer relies on the Linux kernel
-source being available at /usr/src/linux for ELKS to compile.</P></TD>
-</TR>
-
-<TR Align=Center CellPadding=3 VAlign=Center>
-<TD>13</TD>
-<TD>Jan</TD>
-<TD>0.1.0-pre4</TD>
-<TD><P Align=Justify>Kernel release. This release begins the process of
-moving the serial ports to their correct node numbers rather than having
-them occupy nodes reserved for virtual terminals.</P></TD>
-</TR>
-
-<TR Align=Center CellPadding=3 VAlign=Center>
 <TD>27</TD>
 <TD RowSpan=4>Nov</TD>
 <TD RowSpan=9>2001</TD>
+<TD RowSpan=3>ELKS</TD>
 <TD>0.1.0-pre3</TD>
 <TD><P Align=Justify>Kernel release.</P></TD>
 </TR>
