@@ -11,9 +11,13 @@ Contributor             Current Email address           CHANGELOG entries found
 Alistair Riddoch        <AlRiddoch@zepler.org>           1 Jan 1995-20 Oct 1999
 Harry Kalogirou         <HarKal@rainbow.cs.unipi.gr>     7 Nov 2001-24 Nov 2001
 Michael McConnell       <Soruk@Eridani.co.uk>           11 Nov 2001-12 Nov 2001
-Riley Williams          <rhw@MemAlpha.cx>                8 Nov 2001- 9 Jan 2002
+Riley Williams          <rhw@MemAlpha.cx>                8 Nov 2001-11 Mar 2002
 
 -------------------------------------------------------------------------------
+
+Mon Mar 11 23:05:35 GMT 2002	Riley Williams <rhw@MemAlpha.cx>
+
+	* Release history brought up to date.
 
 Wed Jan  9 23:36:32 GMT 2002	Riley Williams <rhw@MemAlpha.cx>
 
